# source-map-parser

./: .gitignore  CHANGELOG.md  CLAUDE.md  CONTRIBUTORS.md  Cargo.toml  DEVELOPMENT.md  LICENSE  README.md
.bmad-core/: install-manifest.yaml
.bmad-core/workflows/: brownfield-service-with-branch.yaml
.claude/: settings.local.json
.github/workflows/: alpha-bootstrap.yml  alpha-merge-beta.yml  ci.yml  finalize-release.yml  prepare-release.yml  release.yml
assets/: index.js
crates/cli/: Cargo.toml
crates/cli/src/: main.rs
crates/node_sdk/: Cargo.toml  README.md  package.json  tsconfig.json  vite.config.mjs  vitest.config.mjs
crates/node_sdk/skills/source-map-parser-node-integration/: SKILL.md
crates/node_sdk/skills/source-map-parser-node-integration/evals/: evals.json
crates/node_sdk/src/: index.ts  lib.rs  types.ts
crates/node_sdk/tests/: test_basic.test.mjs  wasm_extended.rs  wasm_smoke.rs
crates/source_map_parser/: Cargo.toml  README.md
crates/source_map_parser/skills/source-map-parser-rust-integration/: SKILL.md
crates/source_map_parser/skills/source-map-parser-rust-integration/evals/: evals.json
crates/source_map_parser/src/: context_lookup.rs  lib.rs  sourcemap_unpacker.rs  stack_transform.rs  token_generator.rs
crates/source_map_parser/tests/: integration.rs
scripts/: build-wasm-node.sh  create-feature-branch.sh  generate-changelog.sh  install.sh
