[package]
name = "source-map-parser-cli"
version = "0.1.0"
authors.workspace = true
edition.workspace = true
license.workspace = true
description = "Native CLI for source_map_parser"

[[bin]]
name = "source-map-parser"
path = "src/main.rs"

[dependencies]
clap = { version = "4.5", features = ["derive"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
source_map_parser = { path = "../source_map_parser" }
thiserror = "1.0"
ureq = { version = "2.12", default-features = true }
