[package]
name = "source_map_parser_node"
description = "A WebAssembly package for source_map_parser"
version = "0.1.0-beta.0"
authors.workspace = true
edition.workspace = true
license.workspace = true

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
wasm-bindgen = "0.2.89"
serde-wasm-bindgen = "0.6.5"
js-sys = "0.3"
source_map_parser = { path = "../source_map_parser", version = "0.1.0-beta.0" }

[lib]
crate-type = ["cdylib", "rlib"]

[dev-dependencies]
wasm-bindgen-test = "0.3"

[package.metadata.wasm-bindgen]
targets = ["wasm32-unknown-unknown"]
