[package]
name = "source_map_parser"
description = "Parse and map JavaScript (and other) stack traces back to original source via source maps"
version = "0.1.0"
authors.workspace = true
edition.workspace = true
license.workspace = true

[dependencies]
once_cell = "1.18.0"
pretty_assertions = "1.4.1"
regex = "1.10.2"
rstest = "0.23.0"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
sourcemap = "7.0.1"
thiserror = "1.0"
